// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Content should match snapshot 1`] = `
[
  <View
    handlerTags={
      [
        1,
      ]
    }
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onGestureHandlerTouchEvent={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-none"
    style={
      {
        "display": "contents",
      }
    }
  >
    <View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#EC0D2A",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "bottom": 0,
                "justifyContent": "center",
                "position": "absolute",
                "top": 0,
              },
              {
                "width": 350,
              },
              [Function],
            ]
          }
        >
          <View
            accessibilityLabel="Delete"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={0.105}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 80,
                },
                {
                  "backgroundColor": "#EC0D2A",
                },
              ]
            }
            testID="servers-history-https://open.rocket.chat-delete"
            underlayColor="black"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={[Function]}
      >
        <ExternalKeyboardView
          canBeFocused={true}
          enableA11yFocus={false}
          enableContextMenu={false}
          group={false}
          haloEffect={true}
          hasKeyDownPress={false}
          hasKeyUpPress={true}
          hasOnFocusChanged={true}
          lockFocus={0}
          onContextMenuPress={[Function]}
          onFocusChange={[Function]}
          onKeyUpPress={[Function]}
          orderIndex={-1}
          screenAutoA11yFocusDelay={300}
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={1}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  undefined,
                  {
                    "margin": undefined,
                    "marginBottom": undefined,
                    "marginEnd": undefined,
                    "marginHorizontal": undefined,
                    "marginLeft": undefined,
                    "marginRight": undefined,
                    "marginStart": undefined,
                    "marginTop": undefined,
                    "marginVertical": undefined,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": undefined,
                  },
                ],
                undefined,
              ]
            }
            underlayColor="#E4E7EA"
          >
            <View
              accessibilityActions={
                [
                  {
                    "label": "Delete",
                    "name": "delete",
                  },
                ]
              }
              accessibilityHint="Activate to select server. Available actions: delete"
              accessibilityLabel="https://open.rocket.chat, john.doe"
              accessible={true}
              onAccessibilityAction={[Function]}
              style={{}}
              testID="servers-history-https://open.rocket.chat"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "padding": 12,
                    },
                    {
                      "height": 68,
                    },
                  ]
                }
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="contain"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={44}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  sfEffect={null}
                  source={
                    [
                      {
                        "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 44,
                      "width": 44,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={44}
                />
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "paddingLeft": 12,
                      "paddingRight": 18,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 18,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "600",
                          "textAlign": "left",
                        },
                        {
                          "color": "#1F2329",
                        },
                      ]
                    }
                  >
                    https://open.rocket.chat
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 16,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "400",
                          "textAlign": "left",
                        },
                        {
                          "color": "#6C727A",
                        },
                      ]
                    }
                  >
                    john.doe
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </ExternalKeyboardView>
      </View>
    </View>
  </View>,
  <View
    handlerTags={
      [
        2,
      ]
    }
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onGestureHandlerTouchEvent={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-none"
    style={
      {
        "display": "contents",
      }
    }
  >
    <View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#EC0D2A",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "bottom": 0,
                "justifyContent": "center",
                "position": "absolute",
                "top": 0,
              },
              {
                "width": 350,
              },
              [Function],
            ]
          }
        >
          <View
            accessibilityLabel="Delete"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={0.105}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 80,
                },
                {
                  "backgroundColor": "#EC0D2A",
                },
              ]
            }
            testID="servers-history-https://superlongservername.tologintoasuperlongservername.rocket.chat-delete"
            underlayColor="black"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={[Function]}
      >
        <ExternalKeyboardView
          canBeFocused={true}
          enableA11yFocus={false}
          enableContextMenu={false}
          group={false}
          haloEffect={true}
          hasKeyDownPress={false}
          hasKeyUpPress={true}
          hasOnFocusChanged={true}
          lockFocus={0}
          onContextMenuPress={[Function]}
          onFocusChange={[Function]}
          onKeyUpPress={[Function]}
          orderIndex={-1}
          screenAutoA11yFocusDelay={300}
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={1}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  undefined,
                  {
                    "margin": undefined,
                    "marginBottom": undefined,
                    "marginEnd": undefined,
                    "marginHorizontal": undefined,
                    "marginLeft": undefined,
                    "marginRight": undefined,
                    "marginStart": undefined,
                    "marginTop": undefined,
                    "marginVertical": undefined,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": undefined,
                  },
                ],
                undefined,
              ]
            }
            underlayColor="#E4E7EA"
          >
            <View
              accessibilityActions={
                [
                  {
                    "label": "Delete",
                    "name": "delete",
                  },
                ]
              }
              accessibilityHint="Activate to select server. Available actions: delete"
              accessibilityLabel="https://superlongservername.tologintoasuperlongservername.rocket.chat, very.long.username.here"
              accessible={true}
              onAccessibilityAction={[Function]}
              style={{}}
              testID="servers-history-https://superlongservername.tologintoasuperlongservername.rocket.chat"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "padding": 12,
                    },
                    {
                      "height": 68,
                    },
                  ]
                }
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="contain"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={44}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  sfEffect={null}
                  source={
                    [
                      {
                        "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 44,
                      "width": 44,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={44}
                />
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "paddingLeft": 12,
                      "paddingRight": 18,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 18,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "600",
                          "textAlign": "left",
                        },
                        {
                          "color": "#1F2329",
                        },
                      ]
                    }
                  >
                    https://superlongservername.tologintoasuperlongservername.rocket.chat
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 16,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "400",
                          "textAlign": "left",
                        },
                        {
                          "color": "#6C727A",
                        },
                      ]
                    }
                  >
                    very.long.username.here
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </ExternalKeyboardView>
      </View>
    </View>
  </View>,
  <View
    handlerTags={
      [
        3,
      ]
    }
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onGestureHandlerTouchEvent={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-none"
    style={
      {
        "display": "contents",
      }
    }
  >
    <View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#EC0D2A",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "bottom": 0,
                "justifyContent": "center",
                "position": "absolute",
                "top": 0,
              },
              {
                "width": 350,
              },
              [Function],
            ]
          }
        >
          <View
            accessibilityLabel="Delete"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={0.105}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 80,
                },
                {
                  "backgroundColor": "#EC0D2A",
                },
              ]
            }
            testID="servers-history-https://stable.rocket.chat-delete"
            underlayColor="black"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={[Function]}
      >
        <ExternalKeyboardView
          canBeFocused={true}
          enableA11yFocus={false}
          enableContextMenu={false}
          group={false}
          haloEffect={true}
          hasKeyDownPress={false}
          hasKeyUpPress={true}
          hasOnFocusChanged={true}
          lockFocus={0}
          onContextMenuPress={[Function]}
          onFocusChange={[Function]}
          onKeyUpPress={[Function]}
          orderIndex={-1}
          screenAutoA11yFocusDelay={300}
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={1}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  undefined,
                  {
                    "margin": undefined,
                    "marginBottom": undefined,
                    "marginEnd": undefined,
                    "marginHorizontal": undefined,
                    "marginLeft": undefined,
                    "marginRight": undefined,
                    "marginStart": undefined,
                    "marginTop": undefined,
                    "marginVertical": undefined,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": undefined,
                  },
                ],
                undefined,
              ]
            }
            underlayColor="#E4E7EA"
          >
            <View
              accessibilityActions={
                [
                  {
                    "label": "Delete",
                    "name": "delete",
                  },
                ]
              }
              accessibilityHint="Activate to select server. Available actions: delete"
              accessibilityLabel="https://stable.rocket.chat, admin"
              accessible={true}
              onAccessibilityAction={[Function]}
              style={{}}
              testID="servers-history-https://stable.rocket.chat"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "padding": 12,
                    },
                    {
                      "height": 68,
                    },
                  ]
                }
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="contain"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={44}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  sfEffect={null}
                  source={
                    [
                      {
                        "uri": "test-file-stub",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 44,
                      "width": 44,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={44}
                />
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "paddingLeft": 12,
                      "paddingRight": 18,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 18,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "600",
                          "textAlign": "left",
                        },
                        {
                          "color": "#1F2329",
                        },
                      ]
                    }
                  >
                    https://stable.rocket.chat
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 16,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "400",
                          "textAlign": "left",
                        },
                        {
                          "color": "#6C727A",
                        },
                      ]
                    }
                  >
                    admin
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </ExternalKeyboardView>
      </View>
    </View>
  </View>,
]
`;

exports[`Story Snapshots: SwipeActions should match snapshot 1`] = `
[
  <View
    handlerTags={
      [
        4,
      ]
    }
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onGestureHandlerTouchEvent={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-none"
    style={
      {
        "display": "contents",
      }
    }
  >
    <View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#EC0D2A",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "bottom": 0,
                "justifyContent": "center",
                "position": "absolute",
                "top": 0,
              },
              {
                "width": 350,
              },
              [Function],
            ]
          }
        >
          <View
            accessibilityLabel="Delete"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={0.105}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 80,
                },
                {
                  "backgroundColor": "#EC0D2A",
                },
              ]
            }
            testID="servers-history-https://open.rocket.chat-delete"
            underlayColor="black"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={[Function]}
      >
        <ExternalKeyboardView
          canBeFocused={true}
          enableA11yFocus={false}
          enableContextMenu={false}
          group={false}
          haloEffect={true}
          hasKeyDownPress={false}
          hasKeyUpPress={true}
          hasOnFocusChanged={true}
          lockFocus={0}
          onContextMenuPress={[Function]}
          onFocusChange={[Function]}
          onKeyUpPress={[Function]}
          orderIndex={-1}
          screenAutoA11yFocusDelay={300}
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={1}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  undefined,
                  {
                    "margin": undefined,
                    "marginBottom": undefined,
                    "marginEnd": undefined,
                    "marginHorizontal": undefined,
                    "marginLeft": undefined,
                    "marginRight": undefined,
                    "marginStart": undefined,
                    "marginTop": undefined,
                    "marginVertical": undefined,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": undefined,
                  },
                ],
                undefined,
              ]
            }
            underlayColor="#E4E7EA"
          >
            <View
              accessibilityActions={
                [
                  {
                    "label": "Delete",
                    "name": "delete",
                  },
                ]
              }
              accessibilityHint="Activate to select server. Available actions: delete"
              accessibilityLabel="https://open.rocket.chat, john.doe"
              accessible={true}
              onAccessibilityAction={[Function]}
              style={{}}
              testID="servers-history-https://open.rocket.chat"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "padding": 12,
                    },
                    {
                      "height": 68,
                    },
                  ]
                }
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="contain"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={44}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  sfEffect={null}
                  source={
                    [
                      {
                        "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 44,
                      "width": 44,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={44}
                />
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "paddingLeft": 12,
                      "paddingRight": 18,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 18,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "600",
                          "textAlign": "left",
                        },
                        {
                          "color": "#1F2329",
                        },
                      ]
                    }
                  >
                    https://open.rocket.chat
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 16,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "400",
                          "textAlign": "left",
                        },
                        {
                          "color": "#6C727A",
                        },
                      ]
                    }
                  >
                    john.doe
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </ExternalKeyboardView>
      </View>
    </View>
  </View>,
  <View
    handlerTags={
      [
        5,
      ]
    }
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onGestureHandlerTouchEvent={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-none"
    style={
      {
        "display": "contents",
      }
    }
  >
    <View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#EC0D2A",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "bottom": 0,
                "justifyContent": "center",
                "position": "absolute",
                "top": 0,
              },
              {
                "width": 350,
              },
              [Function],
            ]
          }
        >
          <View
            accessibilityLabel="Delete"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={0.105}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 80,
                },
                {
                  "backgroundColor": "#EC0D2A",
                },
              ]
            }
            testID="servers-history-https://example.com-delete"
            underlayColor="black"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={[Function]}
      >
        <ExternalKeyboardView
          canBeFocused={true}
          enableA11yFocus={false}
          enableContextMenu={false}
          group={false}
          haloEffect={true}
          hasKeyDownPress={false}
          hasKeyUpPress={true}
          hasOnFocusChanged={true}
          lockFocus={0}
          onContextMenuPress={[Function]}
          onFocusChange={[Function]}
          onKeyUpPress={[Function]}
          orderIndex={-1}
          screenAutoA11yFocusDelay={300}
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={1}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  undefined,
                  {
                    "margin": undefined,
                    "marginBottom": undefined,
                    "marginEnd": undefined,
                    "marginHorizontal": undefined,
                    "marginLeft": undefined,
                    "marginRight": undefined,
                    "marginStart": undefined,
                    "marginTop": undefined,
                    "marginVertical": undefined,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": undefined,
                  },
                ],
                undefined,
              ]
            }
            underlayColor="#E4E7EA"
          >
            <View
              accessibilityActions={
                [
                  {
                    "label": "Delete",
                    "name": "delete",
                  },
                ]
              }
              accessibilityHint="Activate to select server. Available actions: delete"
              accessibilityLabel="https://example.com, user123"
              accessible={true}
              onAccessibilityAction={[Function]}
              style={{}}
              testID="servers-history-https://example.com"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "padding": 12,
                    },
                    {
                      "height": 68,
                    },
                  ]
                }
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="contain"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={44}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  sfEffect={null}
                  source={
                    [
                      {
                        "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 44,
                      "width": 44,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={44}
                />
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "paddingLeft": 12,
                      "paddingRight": 18,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 18,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "600",
                          "textAlign": "left",
                        },
                        {
                          "color": "#1F2329",
                        },
                      ]
                    }
                  >
                    https://example.com
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 16,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "400",
                          "textAlign": "left",
                        },
                        {
                          "color": "#6C727A",
                        },
                      ]
                    }
                  >
                    user123
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </ExternalKeyboardView>
      </View>
    </View>
  </View>,
]
`;

exports[`Story Snapshots: Themes should match snapshot 1`] = `
[
  <View
    handlerTags={
      [
        6,
      ]
    }
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onGestureHandlerTouchEvent={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-none"
    style={
      {
        "display": "contents",
      }
    }
  >
    <View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#EC0D2A",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "bottom": 0,
                "justifyContent": "center",
                "position": "absolute",
                "top": 0,
              },
              {
                "width": 350,
              },
              [Function],
            ]
          }
        >
          <View
            accessibilityLabel="Delete"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={0.105}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 80,
                },
                {
                  "backgroundColor": "#EC0D2A",
                },
              ]
            }
            testID="servers-history-https://open.rocket.chat-delete"
            underlayColor="black"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={[Function]}
      >
        <ExternalKeyboardView
          canBeFocused={true}
          enableA11yFocus={false}
          enableContextMenu={false}
          group={false}
          haloEffect={true}
          hasKeyDownPress={false}
          hasKeyUpPress={true}
          hasOnFocusChanged={true}
          lockFocus={0}
          onContextMenuPress={[Function]}
          onFocusChange={[Function]}
          onKeyUpPress={[Function]}
          orderIndex={-1}
          screenAutoA11yFocusDelay={300}
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={1}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  undefined,
                  {
                    "margin": undefined,
                    "marginBottom": undefined,
                    "marginEnd": undefined,
                    "marginHorizontal": undefined,
                    "marginLeft": undefined,
                    "marginRight": undefined,
                    "marginStart": undefined,
                    "marginTop": undefined,
                    "marginVertical": undefined,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": undefined,
                  },
                ],
                undefined,
              ]
            }
            underlayColor="#E4E7EA"
          >
            <View
              accessibilityActions={
                [
                  {
                    "label": "Delete",
                    "name": "delete",
                  },
                ]
              }
              accessibilityHint="Activate to select server. Available actions: delete"
              accessibilityLabel="https://open.rocket.chat, john.doe"
              accessible={true}
              onAccessibilityAction={[Function]}
              style={{}}
              testID="servers-history-https://open.rocket.chat"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "padding": 12,
                    },
                    {
                      "height": 68,
                    },
                  ]
                }
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="contain"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={44}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  sfEffect={null}
                  source={
                    [
                      {
                        "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 44,
                      "width": 44,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={44}
                />
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "paddingLeft": 12,
                      "paddingRight": 18,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 18,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "600",
                          "textAlign": "left",
                        },
                        {
                          "color": "#1F2329",
                        },
                      ]
                    }
                  >
                    https://open.rocket.chat
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 16,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "400",
                          "textAlign": "left",
                        },
                        {
                          "color": "#6C727A",
                        },
                      ]
                    }
                  >
                    john.doe
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </ExternalKeyboardView>
      </View>
    </View>
  </View>,
  <View
    handlerTags={
      [
        7,
      ]
    }
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onGestureHandlerTouchEvent={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-none"
    style={
      {
        "display": "contents",
      }
    }
  >
    <View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#BB3E4E",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "bottom": 0,
                "justifyContent": "center",
                "position": "absolute",
                "top": 0,
              },
              {
                "width": 350,
              },
              [Function],
            ]
          }
        >
          <View
            accessibilityLabel="Delete"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={0.105}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 80,
                },
                {
                  "backgroundColor": "#BB3E4E",
                },
              ]
            }
            testID="servers-history-https://open.rocket.chat-delete"
            underlayColor="black"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={[Function]}
      >
        <ExternalKeyboardView
          canBeFocused={true}
          enableA11yFocus={false}
          enableContextMenu={false}
          group={false}
          haloEffect={true}
          hasKeyDownPress={false}
          hasKeyUpPress={true}
          hasOnFocusChanged={true}
          lockFocus={0}
          onContextMenuPress={[Function]}
          onFocusChange={[Function]}
          onKeyUpPress={[Function]}
          orderIndex={-1}
          screenAutoA11yFocusDelay={300}
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={1}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  undefined,
                  {
                    "margin": undefined,
                    "marginBottom": undefined,
                    "marginEnd": undefined,
                    "marginHorizontal": undefined,
                    "marginLeft": undefined,
                    "marginRight": undefined,
                    "marginStart": undefined,
                    "marginTop": undefined,
                    "marginVertical": undefined,
                  },
                  {
                    "backgroundColor": "#262931",
                    "borderRadius": undefined,
                  },
                ],
                undefined,
              ]
            }
            underlayColor="#2D3039"
          >
            <View
              accessibilityActions={
                [
                  {
                    "label": "Delete",
                    "name": "delete",
                  },
                ]
              }
              accessibilityHint="Activate to select server. Available actions: delete"
              accessibilityLabel="https://open.rocket.chat, john.doe"
              accessible={true}
              onAccessibilityAction={[Function]}
              style={{}}
              testID="servers-history-https://open.rocket.chat"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "padding": 12,
                    },
                    {
                      "height": 68,
                    },
                  ]
                }
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="contain"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={44}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  sfEffect={null}
                  source={
                    [
                      {
                        "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 44,
                      "width": 44,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={44}
                />
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "paddingLeft": 12,
                      "paddingRight": 18,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 18,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "600",
                          "textAlign": "left",
                        },
                        {
                          "color": "#F2F3F5",
                        },
                      ]
                    }
                  >
                    https://open.rocket.chat
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 16,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "400",
                          "textAlign": "left",
                        },
                        {
                          "color": "#9EA2A8",
                        },
                      ]
                    }
                  >
                    john.doe
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </ExternalKeyboardView>
      </View>
    </View>
  </View>,
  <View
    handlerTags={
      [
        8,
      ]
    }
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onGestureHandlerTouchEvent={[Function]}
    onStartShouldSetResponder={[Function]}
    pointerEvents="box-none"
    style={
      {
        "display": "contents",
      }
    }
  >
    <View>
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "bottom": 0,
              "flexDirection": "row",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#BB3E4E",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "bottom": 0,
                "justifyContent": "center",
                "position": "absolute",
                "top": 0,
              },
              {
                "width": 350,
              },
              [Function],
            ]
          }
        >
          <View
            accessibilityLabel="Delete"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={0.105}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": 80,
                },
                {
                  "backgroundColor": "#BB3E4E",
                },
              ]
            }
            testID="servers-history-https://open.rocket.chat-delete"
            underlayColor="black"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={[Function]}
      >
        <ExternalKeyboardView
          canBeFocused={true}
          enableA11yFocus={false}
          enableContextMenu={false}
          group={false}
          haloEffect={true}
          hasKeyDownPress={false}
          hasKeyUpPress={true}
          hasOnFocusChanged={true}
          lockFocus={0}
          onContextMenuPress={[Function]}
          onFocusChange={[Function]}
          onKeyUpPress={[Function]}
          orderIndex={-1}
          screenAutoA11yFocusDelay={300}
          style={
            [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            activeUnderlayOpacity={1}
            animationDuration={0}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  undefined,
                  {
                    "margin": undefined,
                    "marginBottom": undefined,
                    "marginEnd": undefined,
                    "marginHorizontal": undefined,
                    "marginLeft": undefined,
                    "marginRight": undefined,
                    "marginStart": undefined,
                    "marginTop": undefined,
                    "marginVertical": undefined,
                  },
                  {
                    "backgroundColor": "#0d0d0d",
                    "borderRadius": undefined,
                  },
                ],
                undefined,
              ]
            }
            underlayColor="#16181a"
          >
            <View
              accessibilityActions={
                [
                  {
                    "label": "Delete",
                    "name": "delete",
                  },
                ]
              }
              accessibilityHint="Activate to select server. Available actions: delete"
              accessibilityLabel="https://open.rocket.chat, john.doe"
              accessible={true}
              onAccessibilityAction={[Function]}
              style={{}}
              testID="servers-history-https://open.rocket.chat"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "padding": 12,
                    },
                    {
                      "height": 68,
                    },
                  ]
                }
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="contain"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={44}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  sfEffect={null}
                  source={
                    [
                      {
                        "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 44,
                      "width": 44,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={44}
                />
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                      "paddingLeft": 12,
                      "paddingRight": 18,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 18,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "600",
                          "textAlign": "left",
                        },
                        {
                          "color": "#F2F3F5",
                        },
                      ]
                    }
                  >
                    https://open.rocket.chat
                  </Text>
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "fontFamily": "Inter",
                          "fontSize": 16,
                          "fontVariant": [
                            "tabular-nums",
                          ],
                          "fontWeight": "400",
                          "textAlign": "left",
                        },
                        {
                          "color": "#9EA2A8",
                        },
                      ]
                    }
                  >
                    john.doe
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </ExternalKeyboardView>
      </View>
    </View>
  </View>,
]
`;
